# Fooocus

./: .gitignore  default.nix  pyproject.toml  readme.md
.direnv/: nix-profile-.3427.e5f018cf150e  nix-profile-.3427.e5f018cf150e.rc  nix-profile-.5058.d2332963662e  nix-profile-.5058.d2332963662e.rc
fooocus_env/: pyvenv.cfg
