[tool.poetry]
name = "fooocus"
version = "0.1.0"
description = ""
authors = ["Joost van der Laan <joostvanderlaan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
torchsde = "0.2.5"
einops = "0.4.1"
transformers = "4.30.2"
safetensors = "0.3.1"
accelerate = "0.21.0"
pyyaml = "6.0"
pillow = "9.2.0"
scipy = "1.9.3"
tqdm = "4.64.1"
psutil = "5.9.5"
numpy = "1.23.5"
pytorch-lightning = "1.9.4"
omegaconf = "2.2.3"
gradio = "3.41.2"
pygit2 = "1.12.2"
opencv-contrib-python = "4.8.0.74"
httpx = "0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
